--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Чат</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Многопользовательский чат</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Добро пожаловать в чат</h1>
-  <div>
-    <input type="text" id="username" placeholder="Введите ваш никнейм">
-    <input type="password" id="password" placeholder="Введите пароль">
-    <button id="login-btn">Войти</button>
-  </div>
-  <div>
-    <input type="text" id="message" placeholder="Введите сообщение">
-    <button id="send-btn">Отправить</button>
-  </div>
-  <ul id="chat-messages"></ul>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+    <div class="chat-container">
+        <div class="chat-header">
+            <h1>Многопользовательский чат</h1>
+        </div>
+        <div class="chat-messages">
+            <ul id="message-list">
+                <!-- Сюда будут добавляться сообщения -->
+            </ul>
+        </div>
+        <div class="chat-input">
+            <input type="text" id="message-input" placeholder="Введите сообщение...">
+            <button id="send-button">Отправить</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
