--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul id="chat-messages"></ul>
   </div>
 
-  <script src="/public/server.js"></script>
-  <script src="client.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="client.js"></script>
 </body>
 </html>
