--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="client.js"></script>
+  <script src="server.js"></script>
 </body>
 </html>
